@@ -1,4 +1,9 @@
 
+2017-03-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* common.c [_MSC_VER] (cob_get_current_date_and_time):
+	  silence wrong warning 6011
+
 2017-03-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* common.c: fix minor memory leaks in configuration code
